--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+
+.ce-block__content{
+  max-width: 960px;
+  margin: 0 auto;
+}
+.ce-toolbar__content{
+  max-width: 970px;
+
+}
 @layer base {
   :root {
     --background: 0 0% 100%;
