--- a/app/globals.css
+++ b/app/globals.css
@@ -132,3 +132,7 @@ body {
   border-radius: 10px;
   padding: 6px !important;
 }
+
+[data-radix-popper-content-wrapper] {
+  z-index: 50 !important;
+}
